@@ -1,5 +1,7 @@
 Changes for 0.8.5
 
+* fix bugs where all bombers in lhtr defend at 2 (sgb)
+
 * update big world map (surtur2)
 
 * alt click/unclick selects 1/10 the type (Nate)
